--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="mysuperscript.php" autocomplete="on">
+                            <form  action="mysuperscript.php"  autocomplete="on" >
                                 <h1>Log in</h1>
                                     <p>
                                                                         <label for="username" class="uname" data-icon="u" >  Email </label>
@@ -57,7 +57,7 @@
 									<label for="loginkeeping">Keep me logged in</label>
 								</p>
                                 <p class="login button">
-                                    <button type="submit" value="Login" />   Login </button>
+                                    <button type="submit" value="Login"  id="login-btn"/>   Login </button>
 								</p>
                                 <p class="change_link">
 									Not a member yet ?
