changes in index

--- a/client/clin-spec.html
+++ b/client/clin-spec.html
@@ -138,6 +138,15 @@ button {
                                  <p style="margin-left: 40px">
 
                                     <br><br>
+                                    <table id="specList"></table>
+                                </p>
+ <h2  style="text-align: center"> Specialities </h2>
+                        </br>
+
+
+                                 <p style="margin-left: 40px">
+
+                                    <br><br>
                                     <input type="checkbox" name="vehicle" value="Bike"> &nbsp<span style="font-size: large">Cardiology</span><br><br>
                                     <input type="checkbox" name="vehicle" value="Bike">&nbsp<span style="font-size: large">Neurology</span><br>    <br>
                                     <input type="checkbox" name="vehicle" value="Bike">&nbsp<span style="font-size: large">Dermatology</span><br> <br>
