--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style2.css" />
 		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
+		<script src="App.js" type="text/javascript" ></script>
         <style>
         button {
     background-color: #225581;
@@ -41,7 +42,7 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="mysuperscript.php"  autocomplete="on" >
+                             <form autocomplete="on" >
                                 <h1>Log in</h1>
                                     <p>
                                                                         <label for="username" class="uname" data-icon="u" >  Email </label>
@@ -67,7 +68,7 @@
                         </div>
 
                         <div id="register" class="animate form">
-                            <form  action="spec.html" autocomplete="on"  onsubmit="return myFunction()" method="post">
+                            <form autocomplete="on" >
                                 <h1> Sign up </h1>
                                 <p>
                                     <label for="usernamesignup" class="uname" data-icon="u"> organization Name</label>
@@ -88,10 +89,10 @@
 
                                 <p class="signin button">
                                     <tr>
-								 <td><button  id="submitbutton" type="submit" value="Sign up" onclick="passowrd_conf()"  /> Hospital   </button> </td>
+								 <td><button  id="submitbutton" type="submit" value="Sign up"   /> Hospital   </button> </td>
                                     </form>
-                                    <form action="clin-spec.html" autocomplete="on"  onsubmit="return myFunction()" method="post">
-                                 <td><button  id="submitbutton1" type="submit" value="Sign up" onclick="passowrd_conf()"  /> Clinic   </button> </td>
+                                    <form autocomplete="on"   method="post">
+                                 <td><button  id="submitbutton1" type="submit" value="Sign up"  /> Clinic   </button> </td>
                                     </tr>
 								</p>
 
