post problem solved for sign up.

--- a/client/doc.html
+++ b/client/doc.html
@@ -270,7 +270,7 @@ span.psw {
 
                     </tr>
 
-            <button  class="cancelbtn" style="    background-color: #225581;   " type="submit">Add</button>
+            <button  class="cancelbtn"  id="bnt6"style="    background-color: #225581;   " type="submit">Add</button>
 
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
 
@@ -291,6 +291,8 @@ window.onclick = function(event) {
         }
 }
 </script>
+
+<a href="index3.html"><button  style="width:auto;; margin-top:50px ; margin-left:350px"> Done</button></a>
 
  </div>
                 </div>
