--- a/client/equip.html
+++ b/client/equip.html
@@ -204,6 +204,7 @@ span.psw {
                 </li>
             </ul>
         </div>
+        
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
@@ -250,7 +251,7 @@ span.psw {
 
 
                          <div style="text-align: center"  >
-            <button  class="cancelbtn" style="background-color: #225581; " type="submit">Add</button>
+            <button  id="bnt2" class="cancelbtn" style="background-color: #225581; " type="submit">Add</button>
 
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
                 </div>
@@ -271,7 +272,7 @@ window.onclick = function(event) {
         }
 }
 </script>
-
+<a href="cn.html"><button style="width:auto;; margin-top:50px ; margin-left:350px"> Done</button></a>
  </div>
                 </div>
             </div>
