--- a/client/index3.html
+++ b/client/index3.html
@@ -229,7 +229,7 @@ span.psw {
                     <tr>
                <p>
 
-              <td> <button  type="submit"   />Done     </button> </td>
+              <td> <a href="equip.htmi"><button  type="submit"   />Done     </button> </a> </td>
                    </p>
                    </tr>
 
