--- a/client/spec.html
+++ b/client/spec.html
@@ -138,8 +138,7 @@ button {
                         </br>
 
 
-                                 <p style="margin-left: 40px">
-
+         
                                     <br><br>
                                     <input type="checkbox" name="vehicle" value="Bike"> &nbsp<span style="font-size: large">Cardiology</span><br><br>
                                     <input type="checkbox" name="vehicle" value="Bike">&nbsp<span style="font-size: large">Neurology</span><br>    <br>
@@ -151,7 +150,7 @@ button {
                     <tr>
                <p>
 
-              <td> <button     />Done     </button> </td>
+              <td> <a href="doc.html"><button    id="bnt1">Done     </button></a> </td>
                    </p>
                    </tr>
 
